k8s/speedtest-tracker/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
  namespace: speedtest-tracker
spec:
  selector:
    matchLabels:
      app: speedtest-tracker
  template:
    metadata:
      labels:
        app: speedtest-tracker
    spec:
      containers:
      - name: speedtest-tracker
        image: lscr.io/linuxserver/speedtest-tracker:1.6.6
        resources:
          limits:
            memory: 1Gi
            cpu: 1000m
          requests:
            memory: 512Mi
            cpu: 500m
        ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
