k8s/speedtest-tracker/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest-tracker
  namespace: speedtest-tracker 
spec:
  entryPoints: [https]
  routes:
  - kind: Rule
    match: Host(`speedtest.pycrs.cz`) 
    services:
    - kind: Service
      name: speedtest-tracker
      port: https
  tls: {}
